<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_quiz_text"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/earth_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0"
            android:src="@drawable/earth" />

        <TextView
            android:id="@+id/play_quiz_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/earth_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/play_quiz"
            android:textSize="25sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingBottom="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8BBD0"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/Q1" />
        </FrameLayout>

        <CheckBox
            android:id="@+id/Q_1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Question1"
            android:text="@string/India_CB" />

        <CheckBox
            android:id="@+id/Q_1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Question1"
            android:text="@string/Saudi_Arabia_CB" />

        <CheckBox
            android:id="@+id/Q_1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Question1"
            android:text="@string/Kuwait_CB" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8BBD0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/Q2" />
        </FrameLayout>

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q_2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question2"
                android:text="@string/Rabat_RB" />

            <RadioButton
                android:id="@+id/Q_2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question2"
                android:text="@string/Riyadh_RB" />

            <RadioButton
                android:id="@+id/Q_2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question2"
                android:text="@string/Cairo_RB" />
        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8BBD0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/Q3" />
        </FrameLayout>

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q_3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question3"
                android:text="@string/Japan_RB" />

            <RadioButton
                android:id="@+id/Q_3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question3"
                android:text="@string/China_RB" />

            <RadioButton
                android:id="@+id/Q_3_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question3"
                android:text="@string/South_Korea_RB" />
        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8BBD0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/Q4" />
        </FrameLayout>

        <EditText
            android:id="@+id/question4_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Country"
            android:inputType="textCapWords"
            android:paddingBottom="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8BBD0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/Q5" />
        </FrameLayout>

        <RadioGroup
            android:id="@+id/radio_group5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Q_5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question5"
                android:text="@string/Riyal_RB" />

            <RadioButton
                android:id="@+id/Q_5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question5"
                android:text="@string/Dinar_RB" />

            <RadioButton
                android:id="@+id/Q_5_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Question5"
                android:text="@string/Dollar_RB" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Submit"
                android:text="Submit" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/submit"
                android:onClick="Reset"
                android:text="Reset" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>